# HRV-project-main

./: .gitignore  HRV_analysis.ipynb  plot_signal.py  pyproject.toml  report_E_test.py  report_test.py  reportlabtest.py  run.py
analysis/: analyzer.py
hrv_app/: main.py
hrv_app/core/: hrv_analysis.py  plotting.py  preprocessing.py  report_generator.py  report_generator_Eng.py  rri_rpeak.py  tff_reader.py  vollmer_hrv.py
hrv_app/gui/: main_window.py  workers.py
hrv_app/templates/: template_data.py  template_data_Eng.py
legacy/: test.ipynb
legacy/analysis/: hrv_analysis_nk2.py  plot.py
legacy/convert/: tff.py  tfftrans.py
legacy/signals/: filtering.py  resampling.py
