[project]
name = "hrv-project"
version = "0.1.0"
description = "HRV analysis project"
authors = [
    {name = "user"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=2.2,<3",
    "scipy>=1.15,<2",
    "matplotlib>=3.10,<4",
    "pandas>=2.3,<3",
    "neurokit2>=0.2,<1",
    "wfdb>=4.3,<5",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
